Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2479

orphan log Unreasonable when failover logging system

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 4.2.0
    • None
    • None

    Description

      <CollationHosts = "192.16.1.2:8085|172.16.1.2:8085"/>

      when 192.16.1.2 down, the log will send to 172.16.1.2,
      but the w3clog.txt_192.16.1.2-8085.orphan file will be store local log dir.
      172.16.1.2 is alive ,orphan log does not appear is reasonable.

      Attachments

        Activity

          People

            yunkai Yunkai Zhang
            bettydreamit bettydramit
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: